[gd_scene load_steps=5 format=3 uid="uid://cs0yg2xpfihho"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_2oks4"]
[ext_resource type="PackedScene" uid="uid://ctgcbo7hhha3w" path="res://scenes/player.tscn" id="1_5ba6g"]
[ext_resource type="PackedScene" uid="uid://dh5hqds1qpdje" path="res://scenes/enemy.tscn" id="2_ohuwj"]

[sub_resource type="Curve2D" id="Curve2D_gnh5b"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -2, 1, 0, 0, 0, 0, 2, 1, 0, 0, 0, 0, 479, 2, 0, 0, 0, 0, 479, 722, 0, 0, 0, 0, -3, 722, 0, 0, 0, 0, -2, 1)
}
point_count = 6

[node name="Main" type="Node2D"]
script = ExtResource("1_2oks4")
enemy_scene = ExtResource("2_ohuwj")

[node name="Player" parent="." instance=ExtResource("1_5ba6g")]

[node name="Timers" type="Node" parent="."]

[node name="EnemyTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="Timers"]

[node name="StartTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="SpawnerEnemies" type="Path2D" parent="."]
curve = SubResource("Curve2D_gnh5b")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnerEnemies"]
position = Vector2(-2, 1)

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="Timers/EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="Timers/ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="Timers/StartTimer" to="." method="_on_start_timer_timeout"]
